--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
 
 build:
   number: 2
-  script: "{{ PYTHON }} -m pip install . -vv"
+  script: "PYTHON_SYS_EXECUTABLE={{ PYTHON }} {{ PYTHON }} -m pip install . -vv"
 
 requirements:
   build:
