--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,8 @@ source:
 
 build:
   number: 2
-  script: "PYTHON_SYS_EXECUTABLE={{ PYTHON }} {{ PYTHON }} -m pip install . -vv"
+  script: "PYO3_PYTHON={{ PYTHON }} {{ PYTHON }} -m pip install . -vv" # [not win]
+  script: "{{ PYTHON }} -m pip install . -vv" # [win]
 
 requirements:
   build:
