Maybe it's trying to install the source?

--- a/recipe/Makefile
+++ b/recipe/Makefile
@@ -1,4 +1,5 @@
 pypy-build-n-install:
 	maturin build -i $(shell which pypy) --release --out wheels
 	pypy ./pypy_patch.py
+	rm -f wheels/*.gz
 	pypy -m pip install wheels/*.whl
