Attempt to install from PyPi
Ref https://conda.io/projects/conda-build/en/latest/user-guide/wheel-files.html

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,19 +11,12 @@ source:
 
 build:
   number: 0
-  script: {{ PYTHON }} -m pip install . -vv
+  script: pip install --no-deps cramjam=={{ version }}
 
 requirements:
-  build:
-    - rust
-    - maturin
-    - toml
-    - {{ compiler('c') }}
   host:
     - python
     - pip
-    - maturin
-    - toml
   run:
     - python
 
