Try to fix no distribution found error, upgrade pip

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,9 @@ source:
 
 build:
   number: 0
-  script: pip install --no-deps cramjam=={{ version }}
+  script: |
+    pip install --upgrade pip
+    pip install --no-deps cramjam=={{ version }}
 
 requirements:
   host:
