--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,7 @@
 {% set name = "cramjam" %}
 {% set version = "2.0.0" %}
-{% set major_minor = version[:2] | replace('.', '') %}
+{% set py_ver_split = PY_VER.split(".") %}
+{% set major_minor = py_ver_split[0] + py_ver_split[1] %}
 package:
   name: {{ name|lower }}
   version: {{ version }}
