Account for m postfixing

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,9 +12,10 @@ source:
 
 build:
   number: 0
-  script: pip install https://pypi.debian.net/cramjam/cramjam-{{ version }}-cp{{ major_minor  }}-cp{{ major_minor }}m-manylinux2010_x86_64.whl # [linux]
-  script: pip install https://pypi.debian.net/cramjam/cramjam-{{ version }}-cp{{ major_minor  }}-cp{{ major_minor }}m-macosx_10_7_{{ OSX_ARCH }}.whl # [osx]
-  script: pip install https://pypi.debian.net/cramjam/cramjam-{{ version }}-cp{{ major_minor  }}-none-win_amd64.whl # [win]
+  {% set m_postfix = 'm' if major_minor in ('36', '37') else '' %}
+  script: pip install https://pypi.debian.net/cramjam/cramjam-{{ version }}-cp{{ major_minor + m_postfix }}-cp{{ major_minor + m_postfix }}-manylinux2010_x86_64.whl  # [linux]
+  script: pip install https://pypi.debian.net/cramjam/cramjam-{{ version }}-cp{{ major_minor }}-cp{{ major_minor + m_postfix }}-macosx_10_7_{{ OSX_ARCH }}.whl  # [osx]
+  script: pip install https://pypi.debian.net/cramjam/cramjam-{{ version }}-cp{{ major_minor }}-none-win_amd64.whl  # [win]
 
 
 requirements:
