Add directly wheel installs

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,7 @@
 {% set name = "cramjam" %}
 {% set version = "2.0.1" %}
-
+{% set py_ver_split = PY_VER.split(".") %}
+{% set major_minor = py_ver_split[0] + py_ver_split[1] %}
 package:
   name: {{ name|lower }}
   version: {{ version }}
@@ -11,19 +12,16 @@ source:
 
 build:
   number: 0
-  script: {{ PYTHON }} -m pip install . -vv
+  {% set m_postfix = 'm' if major_minor in ('36', '37') else '' %}
+  script: pip install --no-deps https://pypi.debian.net/cramjam/cramjam-{{ version }}-cp{{ major_minor }}-cp{{ major_minor + m_postfix }}-manylinux2010_x86_64.whl  # [linux]
+  script: pip install --no-deps https://pypi.debian.net/cramjam/cramjam-{{ version }}-cp{{ major_minor }}-cp{{ major_minor + m_postfix }}-macosx_10_7_{{ OSX_ARCH }}.whl  # [osx]
+  script: pip install --no-deps https://pypi.debian.net/cramjam/cramjam-{{ version }}-cp{{ major_minor }}-none-win_amd64.whl  # [win]
+
 
 requirements:
-  build:
-    - rust
-    - maturin
-    - toml
-    - {{ compiler('c') }}
   host:
     - python
     - pip
-    - maturin
-    - toml
   run:
     - python
 
@@ -44,7 +42,7 @@ about:
     This is handy when being used in environments like AWS Lambda, 
     where installing packages like python-snappy becomes difficult because of 
     system level dependencies.
-  doc_url: https://docs.rs/cramjam/1.1.0/cramjam/
+  doc_url: https://docs.rs/cramjam
 
 extra:
   recipe-maintainers:
