--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,21 +12,24 @@ source:
   sha256: 64f11cdcd6dca8d1a180e7dc2dbc44b0bb26fe7d1c490006c233815f4587ef61
 
 build:
-  number: 0
+  number: 1
   script: {{ PYTHON }} -m pip install . -vv
-  {% set m_postfix = 'm' if major_minor in ('36', '37') else '' %}
-  script: {{ PYTHON }} -m pip install --no-deps https://pypi.debian.net/cramjam/cramjam-{{ version }}-cp{{ major_minor }}-cp{{ major_minor + m_postfix }}-manylinux2010_x86_64.whl  # [linux]
-  script: {{ PYTHON }} -m pip install --no-deps https://pypi.debian.net/cramjam/cramjam-{{ version }}-cp{{ major_minor }}-cp{{ major_minor + m_postfix }}-{{ 'macosx_10_7_x86_64' if OSX_ARCH != 'arm64' else 'macosx_10_9_universal2' }}.whl  # [osx]
-  script: {{ PYTHON }} -m pip install --no-deps https://pypi.debian.net/cramjam/cramjam-{{ version }}-cp{{ major_minor }}-none-win_amd64.whl  # [win]
-
 
 requirements:
   build:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - maturin                                # [build_platform != target_platform]
+    - toml                                   # [build_platform != target_platform]
+    - rust                                   # [build_platform != target_platform]
+    - {{ compiler('c') }}                    # [unix]
+    - {{ compiler('m2w64_c') }}              # [win]
   host:
     - python
     - pip
+    - maturin
+    - toml
+    - rust
   run:
     - python
 
