Set cross-compile env vars

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,8 +12,14 @@ source:
   sha256: 6a9d137ad56b31ab127d33061a4552dd21aa43836c6874658cc7e73bda0b76e4
 
 build:
-  number: 0
-  script: {{ PYTHON }} -m pip install . -vv
+  number: 1
+  script:
+    {% if build_platform != target_platform %}
+    - export PYO3_CROSS_INCLUDE_DIR=$PREFIX/include
+    - export PYO3_CROSS_LIB_DIR=$SP_DIR/../
+    - export PYO3_CROSS_PYTHON_VERSION=$PY_VER
+    {% endif %}
+    - {{ PYTHON }} -m pip install . -vv
 
 requirements:
   build:
