--- a/.ci_support/osx_arm64_python3.9.____cpython.yaml
+++ b/.ci_support/osx_arm64_python3.9.____cpython.yaml
@@ -5,7 +5,7 @@ c_compiler:
 c_compiler_version:
 - '11'
 channel_sources:
-- conda-forge/label/rust_dev,conda-forge
+- conda-forge
 channel_targets:
 - conda-forge main
 macos_machine:
@@ -16,5 +16,7 @@ pin_run_as_build:
     max_pin: x.x
 python:
 - 3.9.* *_cpython
+rust_compiler:
+- rust
 target_platform:
 - osx-arm64
