--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "cramjam" %}
-{% set version = "2.8.3" %}
+{% set version = "2.8.4rc3" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 6b1fa0a6ea8183831d04572597c182bd6cece62d583a36cde1e6a86e72ce2389
+  sha256: de59cbb04852bee6e1fc5cd9faace43e7f86ac7d5222a297e1a5c3566bffbc14
 
 build:
   number: 2
