install from url

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,13 +28,10 @@ source:
 build:
   number: 0
   script: |
-    curl -O https://pypi.org/pypi/cramjam/json
+    curl https://pypi.org/pypi/cramjam/json
     url=$(cat json | jq -r '.releases."{{ version }}" | .[] | select(.python_version == "cp{{ major_minor }}") | select(.filename | contains("{{ target }}") and contains("{{ arch }}") ) | select(.filename | contains("musllinux") | not) | .url')
-    fln=$(cat json | jq -r '.releases."{{ version }}" | .[] | select(.python_version == "cp{{ major_minor }}") | select(.filename | contains("{{ target }}") and contains("{{ arch }}") ) | select(.filename | contains("musllinux") | not) | .filename')
-    echo "Fetching wheel at $url"
-    curl -o "$fln" "$url"        
-    echo "Installing wheel"
-    {{ PYTHON }} -m pip install --pre --no-deps --no-index cramjam --find-links . -vv --target $SP_DIR
+    {{ PYTHON }} -m pip install --pre --no-deps --no-index $url -vv --target $SP_DIR  # [not win]
+    %PYTHON% -m pip install --pre --no-deps --no-index %url% -vv --target %SP_DIR%    # [win]
 
 requirements:
   build:
