clean up conversion a bit

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -20,13 +20,11 @@ build:
 requirements:
   build:
     - if: build_platform != target_platform
-      then: python
-    - if: build_platform != target_platform
-      then: cross-python_${{ target_platform }}
-    - if: build_platform != target_platform
-      then: maturin
-    - if: build_platform != target_platform
-      then: toml
+      then: 
+        - python
+        - cross-python_${{ target_platform }}
+        - maturin
+        - toml
     - ${{ compiler('rust') }}
     - ${{ stdlib('c') }}
     - ${{ compiler('c') }}
@@ -45,6 +43,8 @@ tests:
   - python:
       imports:
         - cramjam
+      pip_check: true
+      python_version: ${{ python }}
 
 about:
   license: MIT
