--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -15,6 +15,7 @@ source:
 build:
   number: 1
   script:
+    - cargo-bundle-licenses --format yaml --output THIRDPARTY.yml
     - ${{ PYTHON }} -m pip install . -vv
 
 requirements:
@@ -31,6 +32,7 @@ requirements:
     - ${{ compiler('cxx') }}
     - make
     - cmake
+    - cargo-bundle-licenses
   host:
     - python
     - pip
@@ -48,7 +50,10 @@ tests:
 
 about:
   license: MIT
-  license_file: LICENSE
+  license_file: 
+    - LICENSE
+    - THIRDPARTY.yml
+    - package_license.txt
   summary: python bindings to rust-implemented compression
   # The remaining entries in this section are optional, but recommended.
   description: |
